--- a/style.css
+++ b/style.css
@@ -1,35 +1,26 @@
-        :root {
-          --base: #ffc600;
-          --spacing: 10px;
-          --blur: 0px;
-        }
+:root {
+  --base: #ffc600;
+  --spacing: 0px;
+  --blur: 0px;
+}
+img {
+  padding: var(--spacing);
+  background: var(--base);
+  filter: blur(var(--blur));
+  width: 20%;
+}
+body {
+  text-align: center;
+  background: #193549;
+  color: white;
+  font-family: "helvetica neue", sans-serif;
+  font-weight: 100;
+  font-size: 24px;
+}
+.hl {
+  color: var(--base);
+}
+.controls {
+  margin-bottom: 50px;
+}
 
-        img {
-          padding: var(--spacing);
-          background: var(--base);
-          filter: blur(var(--blur));
-          width: 30%;
-        }
-
-        .hl {
-          color: var(--base);
-        }
-
-        
-
-        body {
-          text-align: center;
-          background: #193549;
-          color: white;
-          font-family: 'helvetica neue', sans-serif;
-          font-weight: 100;
-          font-size: 50px;
-        }
-
-        .controls {
-          margin-bottom: 50px;
-        }
-
-        input {
-          width: 100px;
-        }
